opam-version: "1.2"
maintainer: "philip@pblair.org"
authors: ["Philip Blair"  "Oscar Spencer"]
license: "MIT"
homepage: "https://github.com/grain-lang/grain"
dev-repo: "git+https://github.com/grain-lang/grain.git"
bug-reports: "https://github.com/grain-lang/grain/issues"
doc: "Experimental language targeting WebAssembly"
build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]
build-test: [["dune" "runtest" "-p" name "-j" jobs]]
depends: [
  "ocamlfind" {build & >= "1.7.3" }
  "ocamlbuild" {build & >= "0.12.0" }
  "dune" {build & >= "1.0" }
  "ppx_deriving"
  "ppx_sexp_conv"
  "sexplib"
  "dypgen"
  "core" { >= "0.11.2" }
  "ounit" { >= "2.0.0" }
  "extlib" { >= "1.7.2" }
  "batteries" { >= "2.8.0" }
  "cmdliner" { >= "1.0.2" }
  "ocamlgraph" {>= "1.8.8" }
  "wasm" { = "1.0" }
  "stdint" { >= "0.5.0" }
  "grain"
]
