(lang dune 2.3)
(name grain)
(version 0.6.4)
(using menhir 2.0)

; Flip this to `true` when we want to generate opam files again
(generate_opam_files false)

(license LGPL-3.0)
(authors "Philip Blair" "Oscar Spencer")
(maintainers "philip@grain-lang.org" "oscar@grain-lang.org")
(source (github grain-lang/grain))
(homepage "https://grain-lang.org")
(documentation "https://grain-lang.org/docs/")

; These aren't used currently but left in for reference when we generate opam files again
(package
  (name grain)
  (synopsis "The core Grain language compiler library"))

(package
  (name grainc)
  (synopsis "The core Grain language compiler CLI"))

(package
  (name graindoc)
  (synopsis "Grain documentation generator"))

(package
  (name grainformat)
  (synopsis "Grain formatter"))

(package
  (name grainlsp)
  (synopsis "Grain LSP"))

(package
  (name grain_language_server)
  (synopsis "Grain Language Server Protocol"))

(package
 (name grain_formatting)
 (synopsis "Grain formatting"))

(package
  (name grain_linking)
  (synopsis "The Grain linker"))

(package
  (name grain_codegen)
  (synopsis "Grain WebAssembly code generation"))

(package
  (name grain_middle_end)
  (synopsis "Grain itermediate representations"))

(package
  (name grain_parsing)
  (synopsis "The Grain parser"))

(package
  (name grain_typed)
  (synopsis "The Grain typechecker"))

(package
  (name grain_utils)
  (synopsis "Various Grain utilities"))

(package
 (name grain_diagnostics)
 (synopsis "Diagnostics support"))

(package
  (name grain-tests)
  (synopsis "Tests"))
