opam-version: "2.0"
synopsis: "The core Grain language compiler library"
maintainer: ["philip@grain-lang.org" "oscar@grain-lang.org"]
authors: ["Philip Blair"  "Oscar Spencer"]
license: "MIT"
homepage: "https://github.com/grain-lang/grain"
dev-repo: "git+https://github.com/grain-lang/grain.git"
bug-reports: "https://github.com/grain-lang/grain/issues"
doc: "Experimental language targeting WebAssembly"
build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]
run-test: [["dune" "runtest" "-p" name "-j" jobs]]
depends: [
  "ocamlfind" {build & >= "1.7.3" }
  "ocamlbuild" {build & >= "0.12.0" }
  "conf-openssl" { >= "2" }
  "dune" {build & >= "2.0" }
  "ppx_deriving"
  "ppx_sexp_conv"
  "sexplib"
  "grain_dypgen" { = "0.1" }
  "core" { >= "0.11.2" }
  "ounit" { >= "2.0.0" }
  "extlib" { >= "1.7.2" }
  "batteries" { >= "2.8.0" }
  "cmdliner" { >= "1.0.2" }
  "ocamlgraph" {>= "1.8.8" }
  "grain_wasm_spec" { = "0.1" }
  "stdint" { >= "0.5.0" }
  "grain_utils"
  "grain_parsing"
  "grain_typed"
  "grain_middle_end"
  "grain_codegen"
]
