opam-version: "2.0"
synopsis: "The core Grain language compiler CLI"
maintainer: ["philip@grain-lang.org" "oscar@grain-lang.org"]
authors: ["Philip Blair"  "Oscar Spencer"]
license: "MIT"
homepage: "https://github.com/grain-lang/grain"
dev-repo: "git+https://github.com/grain-lang/grain.git"
bug-reports: "https://github.com/grain-lang/grain/issues"
doc: "Experimental language targeting WebAssembly"
build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]
run-test: [["dune" "runtest" "-p" name "-j" jobs]]
depends: [
  "ocamlfind" {build & >= "1.7.3" }
  "ocamlbuild" {build & >= "0.12.0" }
  "dune" {build & >= "2.0" }
  "js_of_ocaml" { >= "3.6.0" }
  "js_of_ocaml-compiler" { >= "3.6.0" }
  "grain"
]
