(library
 (name grain)
 (public_name grain)
 ;; Note: 'dyp' is provided by the 'dypgen' OPAM package
 (libraries oUnit extlib batteries cmdliner ocamlgraph wasm stdint
   grain_parsing grain_utils grain_typed grain_middle_end grain_codegen
   ppx_deriving ppx_sexp_conv sexplib)
 (preprocess
  (pps ppx_sexp_conv ppx_deriving)))

(install
 (section lib)
 (files
  (grain-stdlib/lists.grlib as stdlib/lists.grlib)
  (grain-stdlib/pervasives.grlib as stdlib/pervasives.grlib))
 (package grain))
