(executable
 (name test)
 (libraries grain oUnit extlib))

(copy_files ../stdlib/*.gr)

(rule
 (targets stdlib-dir.txt)
 (deps (glob_files ../stdlib/*.gr))
 (action
  (write-file %{targets} ../stdlib)))

(alias
 (name runtest)
 (deps
  (:< test.exe)
  stdlib-dir.txt
  (source_tree input)
  (source_tree stdlib)
  (source_tree test-libs)
  (source_tree test-data))
 (action
  (run %{<})))
