(library
 (name docblock)
 (public_name graindoc.docblock)
 (modules docblock)
 (libraries grain grain_diagnostics grain_utils))

(executable
 (name graindoc)
 (public_name graindoc)
 (package graindoc)
 (modules graindoc)
 (modes exe js)
 (flags
  (:standard
   (:include ./config/flags.sexp)))
 (libraries cmdliner grain grain_diagnostics grain_utils graindoc.docblock
   binaryen dune-build-info)
 (preprocess
  (pps ppx_deriving_cmdliner))
 (js_of_ocaml
  (flags --no-sourcemap --no-extern-fs --quiet)))
