(library
 (name format)
 (public_name grainformat.format)
 (modules format res_doc res_minibuffer debug comment_utils)
 (libraries grain grain_diagnostics grain_parsing grain_utils))

(executable
 (name grainformat)
 (public_name grainformat)
 (package grainformat)
 (modules grainformat)
 (modes exe js)
 (flags
  (:standard
   (:include ./config/flags.sexp)))
 (libraries cmdliner grain grain_utils grain_parsing grainformat.format
   binaryen dune-build-info)
 (js_of_ocaml
  (flags --no-sourcemap --no-extern-fs --quiet --disable share)))
