(library
 (name format)
 (public_name grainformat.format)
 (modules debug)
 (libraries grain grain_diagnostics grain_parsing grain_utils
   grain_formatting))

(executable
 (name grainformat)
 (public_name grainformat)
 (package grainformat)
 (modules grainformat)
 (modes exe js)
 (flags
  (:standard
   (:include ./config/flags.sexp)))
 (libraries cmdliner grain grain_utils grain_parsing grain_formatting
   grainformat.format binaryen dune-build-info)
 (js_of_ocaml
  (flags --no-sourcemap --no-extern-fs --quiet --disable share)))
