(executable
 (name grainformat)
 (public_name grainformat)
 (package grainformat)
 (modules grainformat)
 (modes exe js)
 (flags
  (:standard
   (:include ./config/flags.sexp)))
 (libraries cmdliner grain grain_utils grain_parsing grain_formatting
   binaryen dune-build-info)
 (preprocess
  (pps ppx_deriving_cmdliner))
 (js_of_ocaml
  (flags --no-sourcemap --no-extern-fs --quiet)))
