(executable
 (name grainlsp)
 (public_name grainlsp)
 (package grainlsp)
 (modules grainlsp)
 (modes exe js)
 (flags
  (:standard
   (:include ./config/flags.sexp)))
 (libraries cmdliner grain_utils grain_language_server dune-build-info)
 (js_of_ocaml
  (flags --no-sourcemap --no-extern-fs --disable share)
  (javascript_files hacks.js))
 (preprocess
  (pps ppx_deriving_cmdliner)))
