(library
 (name grain)
 (public_name grain)
 ;; Note: 'dyp' is provided by the 'dypgen' OPAM package
 (libraries cmdliner compiler-libs.common grain_codegen grain_middle_end
   grain_parsing grain_typed grain_utils ocamlgraph oUnit
   ppx_sexp_conv.runtime-lib sexplib)
 (preprocess
  (pps ppx_sexp_conv)))

(install
 (section lib)
 (files)
 (package grain))
