(library
 (name grain)
 (public_name grain)
 (libraries cmdliner compiler-libs.common grain_codegen grain_linking
   grain_middle_end grain_parsing grain_typed grain_utils grain_diagnostics
   ppx_sexp_conv.runtime-lib sexplib)
 (preprocess
  (pps ppx_sexp_conv)))

(install
 (section lib)
 (files)
 (package grain))
