(dirs :standard suites utils)

(library
 (name Grain_tests)
 (public_name grain-tests.framework)
 (libraries grain rely.lib)
 (modules TestFramework WarningExtensions test_utils runner))

(executable
 (name test)
 (public_name test)
 (package grain-tests)
 (flags
  (:standard
   -linkall
   -g
   -w
   -40
   (:include ./config/flags.sexp)))
 (libraries grain grain-tests.framework grain-tests.suites grain-tests.utils)
 (modules test))
