(ocamllex lexer)

(library
 (name grain_parsing)
 (public_name grain_parsing)
 (synopsis "Frontend modules for Grain compiler")
 (libraries dyp batteries ppx_deriving ppx_sexp_conv sexplib extlib
   grain_utils yojson core ppx_deriving_yojson.runtime)
 (preprocess
  (pps ppx_sexp_conv ppx_deriving_yojson ppx_deriving)))

(rule
 (targets parser.ml)
 (deps
  (:< parser.dyp))
 (action
  (run dypgen --no-mli --Werror %{<})))
