(menhir
 (modules parser)
 (flags --explain --unused-tokens --strict))

;; The following two rules create a copy of the file parser.mly named
;; unitActionsParser.mly. This is a copy of the grammar where the semantic
;; actions have been removed and replaced with unit values. It is compiled
;; by Menhir's table backend to obtain the module UnitActionsParser.

;; The use of [--external-tokens Parser] is required for the two parsers
;; to share a single `token` type. This makes them usable with the same
;; lexer.

(rule
 (action
  (with-stdout-to
   unitActionsParser.mly
   (run menhir %{dep:parser.mly} --only-preprocess-u --unused-tokens))))

(menhir
 (modules unitActionsParser)
 (flags --table --external-tokens Parser --unused-tokens
   --unused-precedence-levels))

;; This rule compiles the parser.messages file into OCaml code.

(rule
 (action
  (with-stdout-to
   parser_messages.ml
   (run menhir %{dep:parser.mly} --compile-errors %{dep:parser.messages}
     --unused-tokens))))

(library
 (name grain_parsing)
 (public_name grain_parsing)
 (synopsis "Frontend modules for Grain compiler")
 (libraries menhirLib compiler-libs.common grain_utils utf8.lib str
   ppx_deriving_yojson.runtime ppx_sexp_conv.runtime-lib sexplib yojson)
 (preprocess
  (pps ppx_sexp_conv ppx_deriving_yojson sedlex.ppx)))
